--- a/templates/base/nav.html
+++ b/templates/base/nav.html
@@ -5,11 +5,10 @@
       <ul class="submenu">
         <li><a href="{%url 'web:today_data' %}">Today's Data</a></li>
         <li><a href="{%url 'web:get_data' %}">Data by Date</a></li>
-        <li><a href="">Get All Data</a></li>
-        <li><a href="">Submenu item</a></li>
+        <li><a href="{%url 'web:get_excel' %}">Export in Excel</a></li>
       </ul>			
     </li>
-    <li><a href="">Production Monitor</a></li>
+    <li><a href="{%url 'web:monitor' %}">Production Monitor</a></li>
     <li><a href="">Control The Robot</a></li>
     <li><a href="">Contact</a></li>
-  </ul>
+</ul>
